# Cockatrice

./: .gitignore  CLAUDE.md  CMakeLists.txt  SESSION_NOTES.md  TRIGGER_REMINDER_TODO.md
.ci/: compile.sh  docker.sh  name_build.sh  prep_release.sh
.github/workflows/: desktop-build.yml
cmake/: NSIS.template.in  app_config.h.in
cockatrice/: CMakeLists.txt  cockatrice.qrc  dickatrice.desktop
cockatrice/resources/data/: mtg_keywords.json
cockatrice/src/: main.cpp
cockatrice/src/client/: sound_engine.cpp
cockatrice/src/client/tabs/: tab_game.cpp  tab_game.h
cockatrice/src/client/ui/: theme_manager.cpp  window_main.cpp
cockatrice/src/client/ui/widgets/cards/: card_info_display_widget.cpp  card_info_frame_widget.cpp  card_info_frame_widget.h  card_info_keywords_widget.cpp  card_info_keywords_widget.h  card_info_rulings_widget.cpp  card_info_rulings_widget.h
cockatrice/src/dialogs/: dlg_settings.cpp
cockatrice/src/game/cards/: card_info.cpp  card_info.h
cockatrice/src/game/cards/card_database_parser/: cockatrice_xml_4.cpp
cockatrice/src/game/keywords/: keyword_data.cpp  keyword_data.h
cockatrice/src/game/triggers/: trigger_info.h  trigger_manager.cpp  trigger_manager.h  trigger_parser.cpp  trigger_parser.h  trigger_type.h
cockatrice/src/game/zones/: card_zone.cpp  card_zone.h
cockatrice/src/settings/: cache_settings.cpp
cockatrice/themes/: CMakeLists.txt
doc/carddatabase_v4/: cards.xsd
oracle/src/: oracleimporter.cpp  oracleimporter.h
tests/: CMakeLists.txt
tests/triggers/: CMakeLists.txt  trigger_parser_test.cpp
(+6 files in other folders)
